--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 				</div>
 				<div class = "col-lg-4 col-sm-12">
-					<img class = "photo" src="bella.JPG">
+					<img class = "photo" src="bella.jpg">
 				</div>
 				<div class = "col-lg-4 col-sm-12">
 					<h2 class = "title2 font-weight-normal"><strong>About me</strong></h2>
