--- a/index.html
+++ b/index.html
@@ -343,25 +343,25 @@
 		<div class="container">
 			<ul class="social-media_1">
 				<li class="item_4">
-					<a href="https://www.facebook.com/isabella.ou.1" class="a-fix fa fa-facebook"></a>
+					<a href="https://www.facebook.com/isabella.ou.1" class="a-fix fa fa-facebook" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
-					<a href="https://www.linkedin.com/in/hanqi-ou-a95293127/" class="a-fix fa fa-linkedin"></a>
+					<a href="https://www.linkedin.com/in/hanqi-ou-a95293127/" class="a-fix fa fa-linkedin" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
-					<a href="mailto:h3ou@edu.uwaterloo.ca" class="a-fix fa fa-envelope"></a>
+					<a href="mailto:h3ou@edu.uwaterloo.ca" class="a-fix fa fa-envelope" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
-					<a href="https://github.com/isabellaou" class="a-fix fa fa-github"></a>
+					<a href="https://github.com/isabellaou" class="a-fix fa fa-github" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
-					<a href="https://www.instagram.com/isabellaohq/?hl=en" class="a-fix fa fa-instagram"></a>
+					<a href="https://www.instagram.com/isabellaohq/?hl=en" class="a-fix fa fa-instagram" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
-					<a href="http://weibo.com/ouhanqi/profile?rightmod=1&wvr=6&mod=personinfo" class="a-fix fa fa-weibo"></a>
+					<a href="http://weibo.com/ouhanqi/profile?rightmod=1&wvr=6&mod=personinfo" class="a-fix fa fa-weibo" style='text-decoration:none;'></a>
 				</li>
 			</ul>
-			<p class="copyright">© 2017 Hanqi Ou.<i class="fa fa-heart" aria-hidden="true"></i> All rights reserved.</p>
+			<p class="copyright">© 2017 Hanqi Ou.<i class="fa fa-heart" aria-hidden="true" style='text-decoration:none;'></i> All rights reserved.</p>
 		</div>
 	</footer>
 
