Codepen Icon Added

--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
 					<a href="https://github.com/isabellaou" class="a-fix fa fa-github" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
+					<a href="https://codepen.io/isabellaohq/" class="a-fix fa fa-codepen" style='text-decoration:none;'></a>
+				</li>
+				<li class="item_4">
 					<a href="https://www.instagram.com/isabellaohq/?hl=en" class="a-fix fa fa-instagram" style='text-decoration:none;'></a>
 				</li>
 				<li class="item_4">
