--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<h2 class = "title1 font-weight-normal"><span class="star"></span><strong> Hanqi Ou </strong><span class="star"></span></h2>
 					<h3 class = "intro"><strong>Name: </strong><span> Hanqi (Isabella) Ou </span></h3>
 					<h3 class = "intro"><strong>Age: </strong><span> 19 </span></h3>
-					<h3 class = "intro"><strong>Program: </strong><span> Electrical Engineering </span></h3>
+					<h3 class = "intro"><strong>Program: </strong><span> Computer Engineering </span></h3>
 					<h3 class = "intro"><strong>School: </strong><span> University of Waterloo </span></h3>
 					<h3 class = "intro"><strong>Location: </strong><span> Waterloo, ON N2L 3W9 </span></h3>
 
