--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 					<h3 class = "intro"><strong>Program: </strong><span> Computer Engineering </span></h3>
 					<h3 class = "intro"><strong>School: </strong><span> University of Waterloo </span></h3>
 					<h3 class = "intro"><strong>Location: </strong><span> Waterloo, ON N2L 3W9 </span></h3>
+					<h3 class = "intro"><strong>Hometown: </strong><span> Shenzhen, China </span></h3>
 
 				</div>
 				<div class = "col-lg-4 col-sm-12">
@@ -189,13 +190,13 @@
 							<span class="description_2"><strong>Java</strong></span>
 						</li>
 						<li class="item_1">
-							<span class="description_2"><strong>C++</strong></span>
-						</li>
-						<li class="item_1">
 							<span class="description_2"><strong>JavaScript</strong></span>
 						</li>
 						<li class="item_1">
-							<span class="description_2"><strong>Python</strong></span>
+							<span class="description_2"><strong>C++</strong></span>
+						</li>
+						<li class="item_1">
+							<span class="description_2"><strong>jQuery</strong></span>
 						</li>
 						<li class="item_1">
 							<span class="description_2"><strong>VHDL</strong></span>
