--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<a href="https://github.com/isabellaou" target="_blank">Projects</a>
 					</li>
 					<li class="nav-item2">
-						<a href="#">Resume</a>
+						<a href="resume.pdf">Resume</a>
 					</li>
 
 				</ul>
