new development and tools

--- a/index.html
+++ b/index.html
@@ -204,8 +204,11 @@
 						<li class="item_1">
 							<span class="description_2"><strong>UML</strong></span>
 						</li>
-						<li class="item_3">
-							<span class="description_2"><strong>Object Oriented Programming</strong></span>
+						<li class="item_1">
+							<span class="description_2"><strong>Matlab</strong></span>
+						</li>
+						<li class="item_1">
+							<span class="description_2"><strong>OOP</strong></span>
 						</li>
 					</ul>
 				</div>
@@ -228,7 +231,7 @@
 							<span class="description_2"><strong>Aegisub</strong></span>
 						</li>
 						<li class="item_1">
-							<span class="description_2"><strong>BlueJ</strong></span>
+							<span class="description_2"><strong>Linux/Unix</strong></span>
 						</li>
 						<li class="item_2">
 							<span class="description_2"><strong>Microsoft Offie</strong></span>
