--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset = "UTF-8">
@@ -25,12 +25,12 @@
 
 <body>
 
-    <div class="navbar navbar-fixed-top " style="background-color: #afced8">
+    <div class="navbar-default navbar-fixed-top " style="background-color: #afced8 !important; padding:0 30px;">
 
-        <div class="container">
+      
             <!--**********Navbar Brand**********-->
 			<div class="navbar-header">
-				<a href="3" class="brand">H.O</a>
+				<a href="#" class="brand">H.O</a>
 
 				<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 					<span class="icon-bar"></span>
@@ -42,7 +42,7 @@
 			<div class="collapse navbar-collapse navHeaderCollapse">
 
 				<ul class="nav navbar-nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a href="#main_page">Home</a>
 					</li>
 					<li class="nav-item">
@@ -70,7 +70,6 @@
 
 				</ul>
 			</div>
-        </div>
     </div>
 
 	<!--**********Home Page**********-->
@@ -191,13 +190,16 @@
 						</li>
 						<li class="item_1">
 							<span class="description_2"><strong>JavaScript</strong></span>
-						</li>
-						<li class="item_1">
-							<span class="description_2"><strong>C++</strong></span>
-						</li>
+						</li>						
 						<li class="item_1">
 							<span class="description_2"><strong>jQuery</strong></span>
 						</li>
+                        <li class="item_1">
+                            <span class="description_2"><strong>C++</strong></span>
+                        </li>
+                        <li class="item_1">
+                            <span class="description_2"><strong>Python</strong></span>
+                        </li>
 						<li class="item_1">
 							<span class="description_2"><strong>VHDL</strong></span>
 						</li>
