--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item">
-						<a href="https://github.com/isabellaou" target="_blank">Projects</a>
+						<a href="project.html" target="_blank">Projects</a>
 					</li>
 					<li class="nav-item2">
 						<a href="resume.pdf">Resume</a>
