--- a/project.html
+++ b/project.html
@@ -14,14 +14,91 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <style>
+  body, ul, dl, a{
+		margin:0px;
+		padding:0px;
+		text-decoration: none;
+		list-style:none;
+	}
 
+		body{
+			background: #eee;
+		}
+
+		#bg {
+		position: fixed;
+		width: 100%;
+		z-index: -1;
+		top: 0;
+		height: 100%;
+		}
+
+		#t{
+		margin: 20px auto;
+		font-family: verdana;
+		font-size: 50px;
+		text-align: center;
+		color: #000;
+		text-shadow: 1px 1px 3px #333;
+		}
+
+		#list{
+		width:200px;
+		margin: 20px auto;
+		background: #fff;
+		box-shadow: 0 0 5px #555;
+		border-radius: 10px;
+		font-size: 14px;
+		overflow: hidden;
+		font-weight: 300;
+		font-family:arial, verdana, microsoft yahei;
+		}
+
+		#list a, a:visited{
+		color:#666;
+		display: block;
+		min-width: 50px;
+		max-width:100%;
+		height:40px;
+		line-height:40px;
+		text-align: center;
+		border-bottom: 1px solid #ccc;
+		transition: all .3s ease;
+		white-space:nowrap;
+		text-overflow:ellipsis;
+		overflow:hidden;
+		font-family: inherit;
+		text-decoration: none;
+		}
+		#list a:last-child{
+		border: none;
+		}
+
+		#list a:hover{
+		background: #eee;
+		}
+
+		#list:after{
+		content: '.';
+		height: 0;
+		display: block;
+		clear: both;
+		visibility:hidden;
+		}
+  </style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+
 
 
 	</head>
   <body>
-    <a href="./3DCarousel/index.html"> 3D Carousel </a>
+    <base target="_blank"/>
+    <div id="bg"></div>
+    <div id="t">Demo</div>
+    <div id="list">
+      <a href="./3DCarousel/index.html">3D Carousel</a>
+    </div>
   </body>
 </html>
