--- a/project.html
+++ b/project.html
@@ -98,7 +98,8 @@
     <div id="bg"></div>
     <div id="t">Demo</div>
     <div id="list">
-      <a href="./3DCarousel/index.html">3D Carousel</a>
+	<a href="./3DCarousel/index.html">3D Carousel</a>
+	<a href="../NumberPuzzle/puzzle.html">Number Puzzle</a>
     </div>
   </body>
 </html>
