--- a/project.html
+++ b/project.html
@@ -99,7 +99,7 @@
     <div id="t">Demo</div>
     <div id="list">
 	<a href="./3DCarousel/index.html">3D Carousel</a>
-	<a href="../NumberPuzzle/puzzle.html">Number Puzzle</a>
+	<a href="./NumberPuzzle/puzzle.html">Number Puzzle</a>
     </div>
   </body>
 </html>
