--- a/index.html
+++ b/index.html
@@ -186,19 +186,22 @@
 							<span class="description_2"><strong>HTML(5)</strong></span>
 						</li>
 						<li class="item_1">
-							<span class="description_2"><strong>Java</strong></span>
-						</li>
-						<li class="item_1">
 							<span class="description_2"><strong>JavaScript</strong></span>
 						</li>						
 						<li class="item_1">
 							<span class="description_2"><strong>jQuery</strong></span>
+						</li>
+						<li class="item_1">
+							<span class="description_2"><strong>Java</strong></span>
 						</li>
                         <li class="item_1">
                             <span class="description_2"><strong>C++</strong></span>
                         </li>
                         <li class="item_1">
                             <span class="description_2"><strong>Python</strong></span>
+                        </li>
+                        <li class="item_1">
+                            <span class="description_2"><strong>Django</strong></span>
                         </li>
 						<li class="item_1">
 							<span class="description_2"><strong>VHDL</strong></span>
