add a new project

--- a/project.html
+++ b/project.html
@@ -100,6 +100,7 @@
     <div id="list">
 	<a href="./3DCarousel/index.html">3D Carousel</a>
 	<a href="./NumberPuzzle/puzzle.html">Number Puzzle</a>
+	<a href="./snake/snake.html">Snake</a>
     </div>
   </body>
 </html>
