--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset = "UTF-8">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<meta name="description" content="The Personal Website of Hanqi Ou, a student in University of Waterloo.">
 	<title>Isabella Ou - Personal Website</title>
 
 	<link rel="stylesheet" href="css/style.css">
