add alt description

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 				</div>
 				<div class = "col-lg-4 col-sm-12">
-					<img class = "photo" src="bella.jpg">
+					<img class = "photo" src="bella.jpg" alt="Isabella's selfie">
 				</div>
 				<div class = "col-lg-4 col-sm-12">
 					<h2 class = "title2 font-weight-normal"><strong>About me</strong></h2>
