--- a/project.html
+++ b/project.html
@@ -104,7 +104,7 @@
     <div id="bg"></div>
     <div id="t"><i class="fa fa-laptop"></i>Demo</div>
     <div id="list">
-    	<a href="./project/weather-app/index.html"><i class="em em-sunny"></i>Weather App</a>
+    	<a href="./project/weather/index.html"><i class="em em-sunny"></i>Weather App</a>
 		<a href="./project/3DCarousel/index.html"><i class="em em-frame_with_picture"></i>3D Carousel</a>
 		<a href="./project/NumberPuzzle/puzzle.html"><i class="em em-1234"></i>Number Puzzle</a>
 		<a href="./project/snake/snake.html"><i class="em em-snake"></i>Snake</a>
